# sofa

applications/plugins/: CMakeLists.txt
applications/plugins/Geomagic/src/Geomagic/: GeomagicDriver.cpp  GeomagicDriver.h
applications/plugins/MyPlugin/: CMakeLists.txt  NSlidingConstraint.cpp  NSlidingConstraint.h  NSlidingConstraint.inl  NeedleContact.cpp  NeedleContact.h  NeedleContact.inl  NeedleSlidingConstraint.cpp  NeedleSlidingConstraint.h  initMyPlugin.cpp  initMyPlugin.h
applications/plugins/MyPlugin/scene/: NeedleInsertion.scn
examples/Demos/: pointTetmeshCollsion.xml
